# ibkr_trading_app

./: .dockerignore  .env  .env.dev  .env.prod  .env.template  .gitignore  Dockerfile  LICENSE  README.md  memo.txt  requirements-dev.txt  requirements.txt  run.py  setup.cfg  setup.py
.github/workflows/: deploy.yaml  deploy.yaml.disabled
infra/: __init__.py  docker-compose.yml
kubernetes/: deployment.yaml
src/: __init__.py  app.py  config.py  launcher.py  main.py  run_all.py  sync_app.py  trading_app.py  web_app.py
src/_dashboard_app/: Dockerfile  main.py  start.sh
src/_dashboard_app/api/: rest.py  webhook.py  websocket.py
src/_dashboard_app/core/: ws_handler.py
src/_dashboard_app/templates/: dashboard.html
src/_trading_app/: Dockerfile  main.py  start.sh
src/_trading_app/core/: etc.py  ib_event.py  ib_event_handlers.py  ib_event_handlers_bak.py  ib_provider.py  ib_sync.py  market.py  order.py
src/_trading_app/service/: data_updater.py  trade_process.py  trading_hours.py
src/dashboard_app/: app.py
src/dashboard_app/api/: rest.py
src/dashboard_app/core/: ib_event.py  ib_sync.py
src/dashboard_app/services/: data_updater.py
src/dashboard_app/template/: dashboard.html
src/database/: __init__.py  database.py  init_db.py  models.py  session.py  sqlite_manager.py  trading.db
src/database/crud/: __init__.py  account.py  order.py  position.py  trade.py
src/database/redis/: redis_core.py  redis_dashboard.py  redis_strategy.py  redis_trading.py
src/database/schemas/: account.py  order.py
src/database/sqlite/: database.py  (+3 more)
src/exceptions/: __init__.py  trading_exceptions.py
src/router/: account.py  dashboard.py  order.py  position.py  router.py  trade.py
src/routes/: webhook.py
src/shared/: exceptions.py  logger.py  validator.py
src/template/: dashboard.html  template.py
src/trading/: __init__.py  market.py  order.py  webhook.py
src/trading_app/: __init__.py  app.py  market.py  order.py  webhook.py
src/utils/: __init__.py  email_sender.py  env_loader.py  logger.py  reporter.py  screenshotter.py  trading_hours.py
src/web_app/: app.py
tests/: .coverage  coverage.xml  delete_empty_init.py  delete_init_files.py  test_core.py  test_trading.py  test_webhook.py
(+18 files in other folders)
