[metadata]
name = ibkr_trading_app
version = 1.0.0
description = Automated trading application for Interactive Brokers
long_description = file: README.md
long_description_content_type = text/markdown
author = etcheah
url = https://github.com/ceteongvanness/ibkr_trading_app
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Office/Business :: Financial :: Investment

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    ib_insync>=0.9.70
    pandas>=1.5.0
    pyautogui>=0.9.53
    Pillow>=9.2.0
    python-dotenv>=0.21.0

[options.packages.find]
where = src
exclude =
    tests*
    docs*

[options.package_data]
* = *.txt, *.md

[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = 
    --verbose
    --cov=src
    --cov-report=term-missing
    --cov-report=xml
    --cov-report=html

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[mypy-ib_insync.*]
ignore_missing_imports = True

[mypy-pyautogui.*]
ignore_missing_imports = True

[coverage:run]
source = src
omit =
    tests/*
    setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == "__main__":
    pass
    raise ImportError

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[bdist_wheel]
universal = 1
